# qt-solutions

./: .gitmodules
qtservice/: CMakeLists.txt
